--- a/config.yaml
+++ b/config.yaml
@@ -18,6 +18,13 @@ training:
   cube_size:
     spatial: 32
     freq: 32
+  save_plots: True
+
+downstream:
+  calibration:
+    hi_size:
+      coefficient: 0.48
+      intercept: 7.57
 
 constants:
   speed_of_light: 299792.458
