--- a/environment/requirements.txt
+++ b/environment/requirements.txt
@@ -7,7 +7,7 @@ pytest==5.3.5
 sparse==0.11.2
 scikit-image==0.18.1
 astropy==4.2
-pytorch-lightning==1.2.4
+pytorch-lightning==1.3.2
 torch==1.7.1
 torchvision==0.8.2
 opencv-python==4.2.0.34
@@ -19,4 +19,7 @@ PyYAML==5.3.1
 pandas==1.1.0
 matplotlib==3.2.2
 tqdm==4.58.0
+scikit-learn==0.24.1
+nvsmi==0.4.2
+hyperopt==0.2.5
 #horovod==0.19.5
