--- a/config.yaml
+++ b/config.yaml
@@ -6,41 +6,41 @@ path:
   models: ./saved_models/
 
 data:
-  splitsize: 60
-  memory_batches: 20
+  splitsize: 60 # Cubes to include in a single data set file (.pt)
+  memory_batches: 20 # Number of splits read into memory when creating data set, smaller number takes more memory
 
 segmentation:
-  size: dev_s
-  limit_files: null
-  model_name: resnet34
+  size: dev_s # dev_ or dev_l
+  limit_files: null # Specify to use a subset of data set, e.g., use only limit_files *.pt files
+  model_name: resnet34 # Models verified compatible are resnet18, resnet34, resnet50, resnet101 & resnet152
   filtering:
     fraction: 1 # Fraction of sources to use in training data
     power_measure: line_flux_integral # Column to use for filtering data to segmentation
-  noise_per_source: 4
+  noise_per_source: 4 # Relation noise/source boxes in the generated data set.
   target:
     smoothing_fwhm: 0 # FWHM in arcsec of Gaussian for smoothing segmap. 7 according to data description, 0 = no smoothing.
     min_value: .1 # Minimum voxel value in final segmentmap used for segmentation
     padding: 1 # Padding around minor axis as relative length of major axis. 0 is X-shape segmentmap, 1 means full cylinder
-  cube_size:
-    spatial: 32
-    freq: 32
-  augmentation: True
+  cube_size: # Cube size for training, should not be smaller than 32 in any dimension
+    spatial: 32 # x and y axis
+    freq: 32 # frequency axis
+  augmentation: True # Use rotation and mirroring to augment more training data
   validation:
-    split: 0.8
-    reduction: 0
-  batch_size: 128
-  source_fraction:
-    training_start: 0.5
-    training_end: 0.5
-    validation: 0.5
-  robust_validation: True
-  anneal_interval: 10
+    split: 0.8 # Fraction of cube for training
+    reduction: 0 # Fraction of validation set to use (if not enough memory)
+  batch_size: 128 # Number of cubes in one training batch
+  source_fraction: # Fraction of sources in a training batch
+    training_start: 0.5 # Fraction of sources at t
+    training_end: 0.5 # Fraction after annealing, set equal to training_start for no annealing
+    validation: 0.5 # Fraction of sources in validation, applicapable if robust_validation=False
+  robust_validation: True # True means run full pipeline for validation set, False do light-weight validation on cubes same size as in training
+  anneal_interval: 10 # Update interval (#epochs) of batch source fraction. Larger means slower annealing.
 
 downstream:
   sofia:
     param_file: /pipeline/SoFiA_parameters.txt
   calibration:
-    hi_size:
+    hi_size: # Optional linear calibration of HI size predictions. final prediction = coeff * prediction + intercept
       coefficient: 1 # 0.48
       intercept: 0 # 7.57
 
@@ -71,10 +71,10 @@ characteristic_parameters:
   - w20
 
 hyperparameters:
-  threshold: 0.5
-  min_intensity: 10
+  threshold: 0.5 # Threshold for CNN output
+  min_intensity: 10 # Minimum line flux integral to be included in catalogue
 
 traversing:
-  fits_file: null
-  checkpoint: resnet18-0-epoch=479-adjusted_point_epoch=39.22.ckpt
-  gpu_memory_max: 7000
+  fits_file: null # The fits file to traverse
+  checkpoint: resnet18-0-epoch=479-adjusted_point_epoch=39.22.ckpt # Model to use
+  gpu_memory_max: 7000 # Specifiy hardware capacity
