--- a/config.yaml
+++ b/config.yaml
@@ -79,5 +79,5 @@ hyperparameters:
 
 traversing:
   fits_file: null # The fits file to traverse
-  checkpoint: resnet18-0-epoch=479-adjusted_point_epoch=39.22.ckpt # Model to use
-  gpu_memory_max: 7000 # Specifiy hardware capacity
+  checkpoint: resnet34-0-epoch=346-val_loss=0.79.ckpt # Model to use
+  gpu_memory_max: 7000 # Specify hardware capacity
